# focus-forge

./: .gitignore  README.md  components.json  index.html  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.app.json  tsconfig.json  vite.config.ts
backup/focus_forge/: __init__.py  __main__.py  config.py  db_utils.py  list_sessions.py  summary_sessions.py
backup/src/focus_forge/: __main__.py  add_session.py  cli.py  config.py  db_utils.py
scripts/: folder_tree.py  mock_data.py
src/: main.tsx
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/app/: styles.css
src/app/ui/: Layout.tsx  Sidebar.tsx
src/features/auth/: auth.service.ts  auth.store.ts  user.service.ts
src/features/dashboard/: index.tsx
src/features/focus-sheet/: focus-sheet.service.ts  focus-sheet.store.ts  index.tsx
src/features/settings/: index.tsx  settings.store.ts
src/features/timer/: index.tsx  timer.store.ts  useTimerInterval.ts
src/features/todo-list/: index.tsx  todo.service.ts  todo.store.ts
src/focus_forge/: __init__.py  __main__.py  add_session.py  cli.py  config.py  db_utils.py  leaderboard.py  leaderboard_manager.py  session_details.py  summary_sessions.py  usage.py
src/shared/components/: add-edit-sheet.tsx
src/shared/config/: constants.ts
src/shared/lib/: data-management.service.ts  firebase.ts  notifications.ts  utils.ts
src/shared/ui/: card.tsx  data-table.tsx  form.tsx  sheet.tsx
tests/: __init__.py  test_add_session.py
(+14 files in other folders)
