[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "focus-forge"
version = "0.1.0"
description = "Personal time tracker"
authors = [
    { name = "sayantan", email = "sayantand938@gmail.com" }
]
dependencies = [
    "typer",
    "rich"    
]
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
focus = "focus_forge.cli:app"

[tool.setuptools]
packages = ["focus_forge"]
package-dir = {"" = "src"}